k8s/apps/services/mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
spec:
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mqtt
        image: eclipse-mosquitto:alpine@sha256:9cfdd46ad59f3e3e5f592f6baf57ab23e1ad00605509d0f5c1e9b179c5314d87
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  ports:
  - port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    app: mqtt
  type: LoadBalancer
