k8s/apps/services/adguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostNetwork: true # for the dhcp server
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.73@sha256:7fbf01d73ecb7a32d2d9e6cef8bf88e64bd787889ca80a1e8bce30cd4c084442
          volumeMounts:
            - mountPath: "/opt/adguardhome/conf"
              name: adguard-data
            - mountPath: "/opt/adguardhome/work"
              name: adguard-data
          livenessProbe:
            exec:
              command:
                - nslookup
                - cocointhe.cloud
                - 192.168.1.10
            initialDelaySeconds: 10
            periodSeconds: 2
            failureThreshold: 4
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-data

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard-dns
  name: adguard-dns
spec:
  ports:
  - port: 53
    protocol: UDP
    targetPort: 53
  selector:
    app: adguard
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  ports:
  - name: http
    port: 42080
    protocol: TCP
    targetPort: 42080
  selector:
    app: adguard
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.cocointhe.cloud
    http:
      paths:
      - backend:
          service:
            name: adguard
            port:
              number: 42080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - adguard.cocointhe.cloud
