k8s/apps/services/octoprint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  selector:
    matchLabels:
      app: octoprint
  replicas: 1
  template:
    metadata:
      labels:
        app: octoprint
    spec:
      nodeName: "drupelet-2" # pin to the node attached to the 3d printer
      containers:
        - name: octoprint
          image: octoprint/octoprint:1.11.0@sha256:912bef0c4e8bb17f999a9defb41475afa410f2e16be8f8792a6f68ad7915aa9a
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /octoprint
              name: octoprint
            - mountPath: /dev/ttyUSB0
              name: ttyusb0
      volumes:
        - name: octoprint
          persistentVolumeClaim:
            claimName: octoprint
        - name: ttyusb0
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
spec:
  selector:
    app: octoprint
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoprint
spec:
  ingressClassName: traefik
  rules:
    - host: octoprint.cocointhe.cloud
      http:
        paths:
          - backend:
              service:
                name: octoprint
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - octoprint.cocointhe.cloud
